[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pywasm"
version = "2.0.0"
authors = [
  { name="Mohanson", email="mohanson@outlook.com" },
]
description = "WebAssembly Interpreter by pure Python"
readme = "README.md"
license = { file = "LICENSE" }

[project.urls]
homepage = "https://github.com/mohanson/pywasm"
